--- a/css/taijha.css
+++ b/css/taijha.css
@@ -319,7 +319,7 @@ li a {
 	margin: 0 2px 2px 0;
 /*	border: #fff solid 1px;*/
 /*	overflow: hidden;*/
-	background-color: #b0b0b0;
+	background-color: #cccccc;
 	margin-bottom: 5px;
 	position: relative;
 	z-index: 480;
